[package]
name = "MinecraftVoxelRayTraversal"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.23.2", features = ["derive"] }
fastnoise-lite = "1.1.1"
glam = "0.30.8"
image = { version = "0.25.9", default-features = false, features = ["png"] }
pollster = "0.4.0"
rand = "0.10.0"
wgpu = "26.0.1"
winit = "0.30.12"
